# codex-storage-proofs

./: .gitignore  Cargo.toml  README.md  build.nims  codex_proofs_ffi.nim  codex_storage_proofs.nim  codex_storage_proofs.nimble  config.nims  package-lock.json  package.json
.github/workflows/: ci.yml
bench/: benches.rs  snarkjs_bench.sh
benches/: benches.rs  snarkjs_bench.sh
circuits/: main.circom  poseidon-digest.circom  poseidon-hasher.circom  sha256_test512.circom  simple-hasher.circom  storer.circom  storer_main_256_80_32_16.circom  tree.circom
scripts/: circuit-prep.sh  circuit_prep.sh  install-circom.sh
src/: ffi.rs  lib.rs  storage_proofs.rs  storageproofs.rs  utils.rs
src/circuit_tests/: mod.rs  poseidon-digest-test.circom  poseidon-hash-test.circom  storer-test.circom  utils.rs
src/poseidon/: constants.rs  mod.rs
test/: fullprocess.js  merkletree.js  sha256.cjs  storer.js
test/circuits/: storer_test.circom
tests/: proof_test.mpack  proof_test.mpack-dump.json  tffi.nim
